# webgpu-fmidx

./: .gitignore  Cargo.toml  README.md  index.html  plan.md
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml
assets/: index-B6T6bk2i.js  webgpu_fmidx_bg-B5ZBZHzq.wasm
benches/: bench_utils.rs  construction.rs  cpu_vs_gpu.rs  query.rs
shaders/: bwt_gather.wgsl  occ_scan.wgsl  prefix_sum.wgsl  radix_sort.wgsl  sa_compare_pairs.wgsl  sa_gather_keys.wgsl  sa_gather_primary.wgsl  sa_init_ranks.wgsl  sa_update_ranks.wgsl
src/: alphabet.rs  c_array.rs  error.rs  lib.rs
src/bwt/: cpu.rs  gpu.rs  mod.rs
src/fm_index/: bidir.rs  bidir_index.rs  mod.rs  query.rs  serialize.rs  smem.rs
src/gpu/: buffers.rs  mod.rs  pipeline.rs  prefix_sum.rs  radix_sort.rs
src/occ/: cpu.rs  gpu.rs  mod.rs
src/suffix_array/: cpu.rs  gpu.rs  mod.rs
src/wasm/: js_api.rs  mod.rs
tests/: bidir_correctness.rs  cpu_correctness.rs  cpu_gpu_bench_correctness.rs  cpu_gpu_equivalence.rs  gpu_correctness.rs  query_tests.rs
tests/common/: mod.rs
web/: index.html  main.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/pkg/: webgpu_fmidx.d.ts  webgpu_fmidx.js  webgpu_fmidx_bg.wasm  webgpu_fmidx_bg.wasm.d.ts
